# dawiix_llama_infer

./: CMakeLists.txt  README.md
demo/: main.cpp
include/base/: alloc.h  base.h  buffer.h  cuda_config.h  tick.h
include/model/: config.h  llama2.h  model.h  raw_model_data.h
include/op/: add.h  embedding.h  encoder.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
include/op/kernels/: kernels_interface.h
include/op/kernels/cpu/: add_kernel.h  emb_kernel.h  matmul_kernel.h  mha_kernel.h  rmsnorm_kernel.h  rope_kernel.h  scale_kernel.h  scale_sum_kernel.h  softmax_kernel.h  swiglu_kernel.h
include/op/kernels/cuda/: add_kernel.cuh  argmax_kernel.cuh  emb_kernel.cuh  matmul_kernel.cuh  mha_kernel.cuh  rmsnorm_kernel.cuh  rope_kernel.cuh  swiglu_kernel.cuh
include/sampler/: argmax_sampler.h  sampler.h
include/tensor/: tensor.h
src/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp
src/model/: llama2.cpp  model.cpp  raw_model_data.cpp
src/op/: add.cpp  embedding.cpp  encoder.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
src/op/kernels/: kernels_interface.cpp
src/op/kernels/cpu/: add_kernel.cpp  emb_kernel.cpp  matmul_kernel.cpp  mha_kernel.cpp  rmsnorm_kernel.cpp  rope_kernel.cpp  scale_kernel.cpp  scale_sum_kernel.cpp  softmax_kernel.cpp  swiglu_kernel.cpp
src/op/kernels/cuda/: add_kernel.cu  argmax_kernel.cu  emb_kernel.cu  matmul_kernel.cu  mha_kernel.cu  rmsnorm_kernel.cu  rope_kernel.cu  swiglu_kernel.cu
src/sampler/: argmax_sampler.cpp
src/source/base/: base.cpp
src/tensor/: tensor.cpp
test/: CMakeLists.txt  test_main.cpp  utils.cu  utils.cuh
test/test_base/: test_buffer.cpp  test_status.cpp
test/test_op/: test_add.cpp  test_emb.cpp  test_load.cpp  test_matmul.cpp  test_rmsnorm.cpp  test_swiglu.cpp
test/test_tensor/: test_tensor.cpp
utils/: export.py
